--- a/weicai28.plist
+++ b/weicai28.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://28.biwe6.com/app/weicai.ipa</string>
+					<string>http://28.biwe6.com/app/weicai28.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
